@@ -1,6 +1,6 @@
 ! Reads the data contained in star.plt1,2 and prints it to screen, taken from plotplt
 !
-!   Copyright 2002-2009 AstroFloyd - astrofloyd.org
+!   Copyright 2002-2010 AstroFloyd - astrofloyd.org
 !   
 !   
 !   This file is part of the eggleton-tools package.
